kubernetes/environments/dev/apps/gitea/ingress.yaml
---
# IngressRoute fuer Gitea (DEV)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea-dev-v2.eneg.de`)
      kind: Rule
      services:
        - name: gitea
          namespace: gitea
          port: 3000
  tls:
    secretName: gitea-tls
